--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/bottom-tabs": "^7.8.8",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
+    "dayjs": "^1.11.19",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-calendars": "^1.1304.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0"
   },
