--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,7 +15,9 @@ buildscript {
         classpath("com.android.tools.build:gradle:8.7.3")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath("com.google.gms:google-services:4.4.2")
     }
 }
+
 
 apply plugin: "com.facebook.react.rootproject"
