--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.5.0",
-    "@react-native-firebase/app": "^23.5.0",
-    "@react-native-firebase/auth": "^23.5.0",
+    "@notifee/react-native": "^9.1.8",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/auth": "^23.7.0",
+    "@react-native-firebase/messaging": "^23.7.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-vector-icons/evil-icons": "^12.4.0",
     "@react-native-vector-icons/fontawesome6": "^12.3.0",
