--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-calendars": "^1.1304.0",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0"
   },
