--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-calendars": "^1.1304.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0"
   },
