--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-calendars": "^1.1304.0",
+    "react-native-device-info": "^15.0.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-linear-gradient": "^2.8.3",
